# main.go
@@ -7,32 +7,33 @@ import (
 	"log"
 	"net/http"
 	"os"
+
 	// "time"
 	// "reflect"
 	// "go-gin/models"
 
 	// jwt "github.com/dgrijalva/jwt-go"
+	"go-gin/docs"
+	"go-gin/middlewares"
+
 	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
 	"github.com/spf13/viper"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
-	"go-gin/middlewares"
-	"go-gin/docs"
 
-	"github.com/swaggo/gin-swagger"
-    "github.com/swaggo/files"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // var jwtKey []byte
 
 type login struct {
-  Username string `form:"username" json:"username" binding:"required"`
-  Password string `form:"password" json:"password" binding:"required"`
+	Username string `form:"username" json:"username" binding:"required"`
+	Password string `form:"password" json:"password" binding:"required"`
 }
 
 func main() {
-	
 
 	// 设置环境变量
 	env := os.Getenv("ENV")
@@ -71,15 +72,20 @@ func main() {
 	router := gin.Default()
 
 	// 定义路由
-	router.GET("/config", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{
-			"server":   config.Server,
-			"database": config.Database,
-		})
-	})
+	// router.GET("/config", func(c *gin.Context) {
+	// 	c.JSON(http.StatusOK, gin.H{
+	// 		"server":   config.Server,
+	// 		"database": config.Database,
+	// 	})
+	// })
 
 	userController := &controllers.UserController{}
 	testController := &controllers.TestController{}
+	homeController := &controllers.HomeController{
+		DB: db,
+	}
+
+	router.GET("/home", homeController.Index)
 
 	// 用户登录路由
 	router.GET("/user", userController.GetUser)
@@ -93,11 +99,11 @@ func main() {
 	router.PUT("/article/:id", articleController.UpdateArticle)
 	router.DELETE("/article/:id", articleController.DeleteArticle)
 	router.GET("/test", testController.Test)
-	
+
 	authMiddleware, err := middlewares.AuthMiddleware(db, config)
-    if err != nil {
-        log.Fatalf("Error creating AuthMiddleware: %v", err)
-    }
+	if err != nil {
+		log.Fatalf("Error creating AuthMiddleware: %v", err)
+	}
 
 	// 添加JWT认证中间件到路由
 	router.POST("/login", authMiddleware.LoginHandler)
@@ -108,23 +114,22 @@ func main() {
 	{
 		authGroup.GET("/profile", func(c *gin.Context) {
 			// 从上下文中获取用户信息
-			 claims := jwt.ExtractClaims(c)
-        // 将claims打印出来
-        	c.JSON(http.StatusOK, gin.H{"claims": claims})
+			claims := jwt.ExtractClaims(c)
+			// 将claims打印出来
+			c.JSON(http.StatusOK, gin.H{"claims": claims})
 			// c.JSON(http.StatusOK, gin.H{"message": "Authenticated", "username": username})
 		})
 	}
 	docs.SwaggerInfo.Title = "go-gin"
-    docs.SwaggerInfo.Description = "by xielk"
-    docs.SwaggerInfo.Version = "1.0"
-    docs.SwaggerInfo.BasePath = "/"
-    docs.SwaggerInfo.Schemes = []string{"http", "https"}
+	docs.SwaggerInfo.Description = "by aaron.xie"
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.BasePath = "/"
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	// 启动服务器
 	port := fmt.Sprintf(":%d", config.Server.Port)
 	router.Run(port)
 }
-
 
 // readConfig 从配置文件中读取配置信息
 func readConfig(configFile string, config interface{}) error {
@@ -137,4 +142,3 @@ func readConfig(configFile string, config interface{}) error {
 	}
 	return nil
 }
-
