# models/User.go
@@ -15,10 +15,18 @@ type User struct {
 	LastLoginTime *time.Time `gorm:"column:last_login_time"`
 	LastLoginIP   string     `gorm:"column:last_login_ip"`
 	LoginTimes    int        `gorm:"column:login_times"`
-	CreatedAt     time.Time  `gorm:"column:created_at"`
+	CreatedAt     time.Time  `gorm:"column:created_at" json:",omitempty"`
 	UpdatedAt     time.Time  `gorm:"column:updated_at"`
+	Avatar        string     `gorm:"column:avatar"`
+}
+
+type ResponseUser struct {
+	ID       uint   `gorm:"primaryKey"`
+	Username string `gorm:"column:user_name"`
+	Phone    string `gorm:"column:phone"`
+	Avatar   string `gorm:"column:avatar"`
 }
 
 func (User) TableName() string {
-	return "tb_users"
+	return "ga_users"
 }
